--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap-vue": "^2.0.0-rc.23",
     "chinese-s2t": "^1.0.0",
     "cross-env": "^5.2.0",
+    "iost": "^0.1.17",
     "koa": "^2.6.2",
     "koa-compress": "^3.0.0",
     "koa-static": "^5.0.0",
