--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "iost": "0.0.18",
     "koa": "^2.6.2",
     "koa-compress": "^3.0.0",
+    "koa-mount": "^4.0.0",
     "koa-static": "^5.0.0",
     "node-sass": "^4.12.0",
     "nuxt": "^2.0.0",
