--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.5.4",
     "axios": "^0.19.0",
+    "babel-cli": "^6.26.0",
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0-rc.23",
     "chinese-s2t": "^1.0.0",
+    "countup.js": "^2.0.4",
     "cross-env": "^5.2.0",
     "iost": "0.0.18",
     "koa": "^2.6.2",
@@ -24,9 +26,16 @@
     "node-sass": "^4.12.0",
     "nuxt": "^2.0.0",
     "sass-loader": "^7.1.0",
-    "viai18n-loader": "^0.0.32"
+    "viai18n-loader": "^0.0.32",
+    "vue-countup-v2": "^4.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
+  },
+  "config": {
+    "nuxt": {
+      "host": "localhost",
+      "port": "3000"
+    }
   }
 }
