--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "abct-web",
+  "name": "cetdac-web",
   "version": "1.0.0",
   "description": "My doozie Nuxt.js project",
   "author": "AlanGuo",
@@ -38,7 +38,7 @@
   "config": {
     "nuxt": {
       "host": "0.0.0.0",
-      "port": "3000"
+      "port": "3002"
     }
   }
 }
