--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
     "chinese-s2t": "^1.0.0",
     "countup.js": "^2.0.4",
     "cross-env": "^5.2.0",
-    "iost": "0.0.18",
     "koa": "^2.6.2",
     "koa-compress": "^3.0.0",
     "koa-mount": "^4.0.0",
     "koa-static": "^5.0.0",
+    "mockjs": "^1.0.1-beta3",
+    "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "nuxt": "^2.0.0",
     "sass-loader": "^7.1.0",
